[project]
name = "e-lib"
version = "0.1.0"
description = "API for managing an online library system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.115.6",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "ruff==0.8.3",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]

ignore = [
    "E501",  # line too long, handled by black
]